correction des chemins

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   </head>
   <body>
 <ul>
-  <li><a class="gallery" href="images/Image1.jpg"><img src="images/Vignette1.jpg" alt=""></a></li>
-    <li><a class="gallery" href="images/Image2.jpg"><img src="images/Vignette2.jpg" alt=""></a></li>
-      <li><a class="gallery" href="images/Image3.jpg"><img src="images/Vignette3.jpg" alt=""></a></li>
-      <li><a class="gallery" href="images/Image4.jpg"><img src="images/Vignette4.jpg" alt=""></a></li>
+  <li><a class="gallery" href="assets/images/image1.jpg"><img src="assets/images/vignette1.jpg" alt=""></a></li>
+    <li><a class="gallery" href="assets/images/image2.jpg"><img src="assets/images/vignette2.jpg" alt=""></a></li>
+      <li><a class="gallery" href="assets/images/image3.jpg"><img src="assets/images/vignette3.jpg" alt=""></a></li>
+      <li><a class="gallery" href="assets/images/image4.jpg"><img src="assets/images/vignette4.jpg" alt=""></a></li>
 
 </ul>
 <script>
